[project]
name = "advent-of-code"
requires-python = ">= 3.12, < 3.13"
authors = [{name = "Nyaaa", email = "1457047+Nyaaa@users.noreply.github.com"}]
description = "Advent of Code puzzle solutions"
version = "0.1.0"
dependencies = [
    "more-itertools>=10.5.0",
    "networkx>=3.3",
    "notebook>=7.2.2",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pre-commit>=3.8.0",
    "regex>=2024.7.24",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "sympy>=1.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
preview = true
target-version = "py312"

[tool.ruff.lint]
select = ['E', 'F', 'UP', 'NPY', 'SIM', 'ICN', 'C4', 'A', 'B', 'ANN', 'N', 'I', 'Q', 'RSE', 'FA',
    'W', 'PL', 'RET', 'FURB', 'RUF', 'PERF', 'PIE', 'ARG', 'PTH', 'PD', 'PGH', 'TRY', 'FLY', 'ICN',
]
ignore = [
    'E701', 'ANN101', 'PLR2004', 'PLW2901', 'TRY003', # that's just too much
    'E226', # triggers on complex numbers
    'PLW1641', # doesn't know NamedTuple/dataclasses
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'
