[project]
name = "advent-of-code"
requires-python = ">= 3.13"
authors = [{name = "Nyaaa", email = "1457047+Nyaaa@users.noreply.github.com"}]
description = "Advent of Code puzzle solutions"
version = "0.1.0"
dependencies = [
    "more-itertools>=10.8.0",
    "networkx>=3.3",
    "notebook>=7.5.0",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "pre-commit>=4.4.0",
    "regex>=2025.11.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sympy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
preview = true

[tool.ruff.lint]
select = ['E', 'F', 'UP', 'NPY', 'SIM', 'ICN', 'C4', 'A', 'B', 'ANN', 'N', 'I', 'Q', 'RSE', 'FA',
    'W', 'PL', 'RET', 'FURB', 'RUF', 'PERF', 'PIE', 'ARG', 'PTH', 'PD', 'PGH', 'TRY', 'FLY', 'ICN',
]
ignore = [
    'E701', 'ANN101', 'PLR2004', 'PLW2901', 'TRY003', # that's just too much
    'E226', # triggers on complex numbers
    'PLW1641', # doesn't know NamedTuple/dataclasses
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'
